Inserindo Redis como Backplane

--- a/API.SignalR/appsettings.Development.json
+++ b/API.SignalR/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Redis": {
+    "User": "usuario_teste",
+    "Password": "password_nao_valido",
+    "Server": "localhost",
+    "Port": "6379"
   }
 }
